# Rendering

./: CMakeLists.txt  main.cpp
include/lit/gl/: frame_buffer.hpp  program.hpp  shader.hpp  texture.hpp  uniform.hpp
include/lit/rendering/: pipeline.hpp  pipeline_node.hpp  shaderx.hpp
src/gl/: frame_buffer.cpp  program.cpp  shader.cpp  texture.cpp
src/rendering/: pipeline.cpp  pipeline_node.cpp  shaderx.cpp
